Time: 27 ms (90.07%), Space: 59.4 MB (57.81%) - LeetHub